--- a/webcomp-webcams-main/public/index.html
+++ b/webcomp-webcams-main/public/index.html
@@ -19,17 +19,9 @@ SPDX-License-Identifier: CC0-1.0
 
   <h1>Web Component - Webcams</h1>
 
-  Code Snippet:
-  <pre><code>
-    &lt;webcomp-webcams centermap="46.5403891,11.5985012" zoommap="10"&gt;&lt;/webcomp-webcams&gt;
-
-    &lt;script src="webcomp-webcams.js"&gt;&lt;/script&gt;
-  </code></pre>
-
-
   <!-- Set the attribute "title" and refer to it as property in JS -->
-  <webcomp-webcams centermap="46.641532,11.355583" zoommap="10" source="dss,idm,lts,panomax,panocloud,feratel" />
-  <script src="webcomp-webcams.js"></script>
+  <webcomp-weatherforecast centermap="46.641532,11.355583" zoommap="10" />
+  <script src="webcomp-weatherforecast.js"></script>
 
 </body>
 
