--- a/webcomp-webcams-main/public/index.html
+++ b/webcomp-webcams-main/public/index.html
@@ -17,7 +17,7 @@ SPDX-License-Identifier: CC0-1.0
 
 <body>
 
-  <h1>Web Component - Webcams</h1>
+  <h1>Web Component - Forecast</h1>
 
   <!-- Set the attribute "title" and refer to it as property in JS -->
   <webcomp-weatherforecast centermap="46.641532,11.355583" zoommap="10" />
