--- a/webcomp-webcams-main/public/index.html
+++ b/webcomp-webcams-main/public/index.html
@@ -38,13 +38,13 @@ SPDX-License-Identifier: CC0-1.0
   <script src="webcomp-weatherforecast.js"></script>
 
   <div id="sidebar" class="sidebar">
-    <button id="Button1" onclick="callForecastApiDrawMap()">Weather Forecast</button>
-    <button id="button2" onclick="callIndustriesApiDrawMap()">Creative Industries</button>
+    <button id="Button1" onclick=callForecastApiDrawMap()>Weather Forecast</button>
+    <button id="button2" onclick=callIndustriesApiDrawMap()>Creative Industries</button>
     <button id="button3">Button 3</button>
   </div>
 
   <!-- Bottone per mostrare/nascondere la barra laterale -->
-  <button onclick="toggleSidebar()" id="sidebar-toggle" class="sidebar-toggle"
+  <button onclick=toggleSidebar() id="sidebar-toggle" class="sidebar-toggle"
           style="position: fixed; top: 20px; right: 20px; font-size: 24px; z-index: 1000">&#9776;</button>
 
   <script>
@@ -53,7 +53,6 @@ SPDX-License-Identifier: CC0-1.0
     const button3 = document.getElementById("button3");
 
     function toggleSidebar() {
-      console.log("button clicked");
       if (button1.style.display === "none") {
         button1.style.display = "block";
         button2.style.display = "block";
