--- a/webcomp-webcams-main/public/index.html
+++ b/webcomp-webcams-main/public/index.html
@@ -12,7 +12,6 @@
   <title>Opendatahub Webcams</title>
 
   <style>
-    /* Stili per i pulsanti */
     #firstButton, #secondButton, #thirdButton, #fourthButton, #fifthButton {
       display: none;
       position: fixed;
@@ -21,7 +20,7 @@
       font-size: 24px;
       width: 215px;
     }
-    /* Specifica la posizione per ciascun pulsante */
+    /* Posizione di ciascun pulsante */
     #firstButton { top: 60px; }
     #secondButton { top: 100px; }
     #thirdButton { top: 140px; }
