ho aggiornato il design dei bottoni mettendo qualche emoji. ora sembra anni 80, hahaha

--- a/webcomp-webcams-main/public/index.html
+++ b/webcomp-webcams-main/public/index.html
@@ -2,40 +2,24 @@
 
  SPDX-License-Identifier: AGPL-3.0-or-later -->
 
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" href="data:,">
+  <link rel="stylesheet" href="buttonClass.css">
   <title>Opendatahub Webcams</title>
-
-  <style>
-    #firstButton, #secondButton, #thirdButton, #fourthButton, #fifthButton {
-      display: none;
-      position: fixed;
-      right: 20px;
-      z-index: 1001; /* Più alto del pulsante del menu */
-      font-size: 24px;
-      width: 215px;
-    }
-    /* Posizione di ciascun pulsante */
-    #firstButton { top: 60px; }
-    #secondButton { top: 100px; }
-    #thirdButton { top: 140px; }
-    #fourthButton { top: 180px; }
-    #fifthButton { top: 220px; }
-  </style>
 </head>
 
 <body>
+
 <div id="sidebar" class="sidebar">
-  <button id="firstButton">Weather Forecast</button>
-  <button id="secondButton">Creative Industries</button>
-  <button id="thirdButton">Interesting Points</button>
-  <button id="fourthButton">Gastronomy</button>
-  <button id="fifthButton">Parking Spots</button>
+  <button id="firstButton"><span class="emoji">⛅</span> <span class="button-text">Weather Forecast</span></button>
+  <button id="secondButton"><span class="emoji">🏭</span> <span class="button-text">Creative Industry</span></button>
+  <button id="thirdButton"><span class="emoji">🏞</span> <span class="button-text">&nbsp Point of Interest</span></button>
+  <button id="fourthButton"><span class="emoji">🍴</span> <span class="button-text">Gastronomy</span></button>
+  <button id="fifthButton"><span class="emoji">🅿️</span> <span class="button-text">Parking Spot</span></button>
 </div>
 
 <webcomp-weatherforecast id="weather-forecast" centermap="46.641532,11.355583" zoommap="10"></webcomp-weatherforecast>
@@ -65,7 +49,7 @@
   }
 </script>
 <!-- Bottone per mostrare/nascondere la barra laterale -->
-<button onclick="toggleSidebar()" id="sidebar-toggle" class="sidebar-toggle"
-        style="position: fixed; top: 20px; right: 20px; font-size: 24px; z-index: 1000">&#9776;</button>
+<button onclick="toggleSidebar()" id="sidebar-toggle" class="sidebar-toggle">&#128269;</button>
+
 </body>
 </html>
