--- a/webcomp-webcams-main/public/index.html
+++ b/webcomp-webcams-main/public/index.html
@@ -1,7 +1,3 @@
-<!-- SPDX-FileCopyrightText: NOI Techpark <digital@noi.bz.it>
-
- SPDX-License-Identifier: AGPL-3.0-or-later -->
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -9,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" href="data:,">
   <link rel="stylesheet" href="buttonClass.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
   <title>Opendatahub Webcams</title>
 </head>
 
@@ -17,7 +14,7 @@
 <div id="sidebar" class="sidebar">
   <button id="firstButton"><span class="emoji">⛅</span> <span class="button-text">Weather Forecast</span></button>
   <button id="secondButton"><span class="emoji">🏭</span> <span class="button-text">Creative Industry</span></button>
-  <button id="thirdButton"><span class="emoji">🏞</span> <span class="button-text">&nbsp Point of Interest</span></button>
+  <button id="thirdButton"><span class="emoji">🏞</span> <span class="button-text">Point of Interest</span></button>
   <button id="fourthButton"><span class="emoji">🍴</span> <span class="button-text">Gastronomy</span></button>
   <button id="fifthButton"><span class="emoji">🅿️</span> <span class="button-text">Parking Spot</span></button>
 </div>
@@ -27,29 +24,14 @@
 
 <script>
   function toggleSidebar() {
-    const button1 = document.getElementById("firstButton");
-    const button2 = document.getElementById("secondButton");
-    const button3 = document.getElementById("thirdButton");
-    const button4 = document.getElementById("fourthButton");
-    const button5 = document.getElementById("fifthButton");
-
-    if (button1.style.display === "none") {
-      button1.style.display = "block";
-      button2.style.display = "block";
-      button3.style.display = "block";
-      button4.style.display = "block";
-      button5.style.display = "block";
-    } else {
-      button1.style.display = "none";
-      button2.style.display = "none";
-      button3.style.display = "none";
-      button4.style.display = "none";
-      button5.style.display = "none";
-    }
+    const buttons = document.querySelectorAll('#sidebar button');
+    buttons.forEach(button => {
+      button.style.display = button.style.display === 'none' ? 'block' : 'none';
+    });
   }
 </script>
-<!-- Bottone per mostrare/nascondere la barra laterale -->
-<button onclick="toggleSidebar()" id="sidebar-toggle" class="sidebar-toggle">&#128269;</button>
+<!-- sidebar -->
+<button onclick="toggleSidebar()" id="sidebar-toggle" class="sidebar-toggle"><i class="fas fa-search"></i></button>
 
 </body>
 </html>
