--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,8 @@
   <link rel="stylesheet" href="buttonClass.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
   <title>Opendatahub Webcams</title>
+  <script src="dist/webcomp-webcams.min.js"></script>
+
 </head>
 
 <body>
@@ -23,6 +25,8 @@
   <button id="fourthButton"><span class="emoji">🍴</span> <span class="button-text">Gastronomy</span></button>
   <button id="fifthButton"><span class="emoji">🅿️</span> <span class="button-text">Parking Spot</span></button>
 </div>
+
+<webcomp-webcams xxx="test" yyy="2"></webcomp-webcams>
 
 <webcomp-weatherforecast id="weather-forecast" centermap="46.641532,11.355583" zoommap="10"></webcomp-weatherforecast>
 <script src="webcomp-weatherforecast.js"></script>
