cleanup and temporary disable deployment

--- a/public/index.html
+++ b/public/index.html
@@ -11,8 +11,7 @@
   <link rel="stylesheet" href="buttonClass.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
   <title>Opendatahub Webcams</title>
-  <script src="dist/webcomp-webcams.min.js"></script>
-
+  
 </head>
 
 <body>
@@ -26,10 +25,10 @@
   <button id="fifthButton"><span class="emoji">🅿️</span> <span class="button-text">Parking Spot</span></button>
 </div>
 
-<webcomp-webcams xxx="test" yyy="2"></webcomp-webcams>
+<!-- <webcomp-mixmarkers xxx="test" yyy="2"></webcomp-mixmarkers> -->
 
-<webcomp-weatherforecast id="weather-forecast" centermap="46.641532,11.355583" zoommap="10"></webcomp-weatherforecast>
-<script src="webcomp-weatherforecast.js"></script>
+<webcomp-mixmarkers id="weather-forecast" centermap="46.641532,11.355583" zoommap="10"></webcomp-mixmarkers>
+<script src="webcomp-mixmarkers.js"></script>
 
 <script>
   //toggleSidebar is a function to show/hide the buttons of the sidebar
